fixed the overflow issue in chrome

--- a/src/App.css
+++ b/src/App.css
@@ -49,17 +49,24 @@
 
 html{
   scroll-behavior: smooth;
+  
 }
 
 body{
+  margin: 0;
+  padding: 0;
   font-family: var(--primary-font);
   font-size: var(--font-bold);
   background-color: var(--background-color);
   width: 100vw;
   height: 100vh;
+  
+}
+body::-webkit-scrollbar {
+  display: none;
 }
 section{
   display: flex;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  
 }
