--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,4 +1,5 @@
 .homepage-container{
     position: relative;
     height: 100vh;
+    width: 100vw;
 }
